Prevent blue highlight when tapping canvas on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -70,4 +70,5 @@ canvas {
   width: 100%;
   height: 100%;
   display: block;
+  -webkit-tap-highlight-color: transparent; /* Prevent Chrome's blue highlight when tapping on mobile. */
 }
